Trying an alt n shitty approach for updating

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      github_token: ${{ secrets.UPDATE_TOKEN }}
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
@@ -20,14 +22,14 @@ jobs:
         pip install -r requirements.txt
     - name: Run cron_update.py
       run: python cron_update.py
-    - name: Commit and push if changes
-      run: |
-        git config --local user.name "GitHub Actions"
-        git config --local user.email "actions@github.com"
-        git add -A
-        git diff-index --quiet HEAD || (git commit -a -m "Automated update at $(date +'%Y-%m-%d %H:%M:%S')" --allow-empty)
-    - name: push changes
-      uses: ad-m/github-push-action@v0.6.0
-      with:
-        github_token: ${{ secrets.UPDATE_TOKEN }}
-        branch: main
+    # - name: Commit and push if changes
+    #   run: |
+    #     git config --local user.name "GitHub Actions"
+    #     git config --local user.email "actions@github.com"
+    #     git add -A
+    #     git diff-index --quiet HEAD || (git commit -a -m "Automated update at $(date +'%Y-%m-%d %H:%M:%S')" --allow-empty)
+    # - name: push changes
+    #   uses: ad-m/github-push-action@v0.6.0
+    #   with:
+    #     github_token: ${{ secrets.UPDATE_TOKEN }}
+    #     branch: main
